Добавляет, пропущенную точку

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -641,7 +641,7 @@ img {
   flex-wrap: wrap;
 }
 
-login-popup-title {
+.login-popup-title {
   margin: 0 0 32px 0;
   font-size: 24px;
   line-height: 36px;
